# dynaarm_driver

./: .pre-commit-config.yaml  CHANGELOG.rst  README.md  repos.list
.github/workflows/: build-humble.yml  build-jazzy.yml  build-kilted.yml  build-rolling.yml
doc/: controllers.md  drive_configuration.md  index.md
doc/controllers/: dynaarm_pid_tuner.md  dynaarm_status_broadcaster.md  dynaarm_status_controller.md  freedrive_controller.md  freeze_controller.md  gravity_compensation_controller.md
dynaarm_controllers/: CMakeLists.txt  controller_interface_plugin.xml  package.xml
dynaarm_controllers/include/dynaarm_controllers/: adaptive_gain_controller.hpp  cartesian_pose_controller.hpp  collision_avoidance_controller.hpp  dynaarm_pid_controller.hpp  dynaarm_pid_tuner.hpp  dynaarm_pose_controller.hpp  dynaarm_safety_controller.hpp  dynaarm_status_broadcaster.hpp  dynaarm_status_controller.hpp  force_torque_broadcaster.hpp  freedrive_controller.hpp  freeze_controller.hpp  gravity_compensation_controller.hpp  interface_utils.hpp  position_controller.hpp
dynaarm_controllers/src/: adaptive_gain_controller.cpp  adaptive_gain_controller_parameters.yaml  cartesian_pose_controller.cpp  cartesian_pose_controller_parameters.yaml  collision_avoidance_controller.cpp  collision_avoidance_controller_parameters.yaml  dynaarm_pid_controller.cpp  dynaarm_pid_controller_parameters.yaml  dynaarm_pid_tuner.cpp  dynaarm_pid_tuner_parameters.yaml  dynaarm_pose_controller.cpp  dynaarm_pose_controller_parameters.yaml  dynaarm_safety_controller.cpp  dynaarm_safety_controller_parameters.yaml  dynaarm_status_broadcaster.cpp  dynaarm_status_controller.cpp  dynaarm_status_controller_parameters.yaml  force_torque_broadcaster.cpp  freedrive_controller.cpp  freedrive_controller_parameters.yaml  freeze_controller.cpp  freeze_controller_parameters.yaml  gravity_compensation_controller.cpp  gravity_compensation_controller_parameters.yaml  position_controller.cpp
dynaarm_driver/: CMakeLists.txt  hardware_interface_plugin.xml  package.xml
dynaarm_driver/config/: controllers.yaml
dynaarm_driver/dynaarm_driver/: CMakeLists.txt  hardware_interface_plugin.xml  package.xml
dynaarm_driver/dynaarm_driver/config/: EL_FLE.yaml  FA_ROT.yaml  SH_FLE.yaml  SH_ROT.yaml  WRIST_1.yaml  WR_FLE.yaml  WR_ROT.yaml  elbow_flexion.yaml  wrist_rotation.yaml
dynaarm_driver/dynaarm_driver/config/arowana4/: forearm_rotation.yaml
dynaarm_driver/dynaarm_driver/config/baracuda12/: elbow_flexion.yaml  forearm_rotation.yaml  shoulder_flexion.yaml  shoulder_rotation.yaml  wrist_flexion.yaml  wrist_rotation.yaml
dynaarm_driver/dynaarm_driver/config/baracuda12/arm_left/: elbow_flexion.yaml
dynaarm_driver/dynaarm_driver/config/baracuda12/arm_right/: shoulder_flexion.yaml  shoulder_rotation.yaml
dynaarm_driver/dynaarm_driver/config/default/: forearm_rotation.yaml  shoulder_flexion.yaml
dynaarm_driver/dynaarm_driver/config/v1/: EL_FLE.yaml  FA_ROT.yaml  SH_ROT.yaml
dynaarm_driver/dynaarm_driver/config/v2/: FA_ROT.yaml
dynaarm_driver/dynaarm_driver/include/dynaarm_driver/: dynaarm_hardware_interface.hpp  dynaarm_mock_hardware_interface.hpp
dynaarm_driver/dynaarm_driver/src/: dynaarm_hardware_interface.cpp  dynaarm_mock_hardware_interface.cpp
dynaarm_driver/dynaarm_hardware_interface/: CMakeLists.txt  package.xml
dynaarm_driver/dynaarm_hardware_interface/include/dynaarm_hardware_interface/: dynaarm_hardware_interface.hpp
dynaarm_driver/dynaarm_hardware_interface/src/: dynaarm_hardware_interface.cpp
dynaarm_driver/dynaarm_hardware_interface_base/: CMakeLists.txt  package.xml
dynaarm_driver/dynaarm_hardware_interface_base/include/dynaarm_hardware_interface_base/: command_translator.hpp  dynaarm_hardware_interface_base.hpp  string_utils.hpp  types.hpp
dynaarm_driver/dynaarm_hardware_interface_base/src/: dynaarm_hardware_interface_base.cpp
dynaarm_driver/dynaarm_hardware_interface_common/: CMakeLists.txt  package.xml
dynaarm_driver/dynaarm_hardware_interface_common/include/dynaarm_hardware_interface_common/: command_translator.hpp  types.hpp
dynaarm_driver/dynaarm_mock_hardware_interface/: CMakeLists.txt  package.xml
dynaarm_driver/dynaarm_mock_hardware_interface/include/dynaarm_mock_hardware_interface/: dynaarm_mock_hardware_interface.hpp
dynaarm_driver/include/dynaarm_driver/: command_translator.hpp  dynaarm_hardware_interface.h  dynaarm_hardware_interface.hpp
dynaarm_driver/launch/: dynaarm.launch.py  mock.launch.py  ros2control.launch.py
dynaarm_driver/src/: dynaarm_hardware_interface.cpp
dynaarm_examples/: CMakeLists.txt  package.xml
dynaarm_extensions/: package.xml  setup.cfg  setup.py
dynaarm_extensions/dynaarm_extensions/duatic_helpers/: duatic_controller_helper.py  duatic_jtc_helper.py  duatic_marker_helper.py  duatic_param_helper.py  duatic_pinocchio_helper.py  duatic_robots_helper.py
dynaarm_extensions/dynaarm_extensions/duatic_pose_controller/: duatic_pose_controller.py  duatic_pose_controller_new.py  ik_solver.py  ik_solver_new.py  moveit_cartesian.py  publish_target_pose.py
dynaarm_extensions/dynaarm_extensions/dynaarm_controller_manager/: __init__.py  dynaarm_controller_manager.py
dynaarm_extensions/dynaarm_extensions/e_stop/: e_stop_node.py
dynaarm_extensions/test/: test_dummy.py
dynaarm_hardware_interface/dynaarm_hardware_interface/: CMakeLists.txt  hardware_interface_plugin.xml  package.xml
dynaarm_hardware_interface/dynaarm_hardware_interface_base/: CMakeLists.txt  package.xml
dynaarm_hardware_interface/dynaarm_hardware_interface_common/: package.xml
dynaarm_hardware_interface/dynaarm_mock_hardware_interface/: hardware_interface_plugin.xml  package.xml
dynaarm_msgs/: CMakeLists.txt  package.xml
dynaarm_msgs/msg/: ArmState.msg  DriveState.msg  MeasuredTorques.msg
gz_plugins/dynaarm_gz_ros2_control/: CMakeLists.txt  gz_hardware_plugins.xml  package.xml
gz_plugins/dynaarm_gz_ros2_control/include/dynaarm_gz_ros2_control/: dynaarm_system.hpp  gz_ros2_control_plugin.hpp
gz_plugins/dynaarm_gz_ros2_control/src/: dynaarm_system.cpp  gz_ros2_control_plugin.cpp
(+13 files in other folders)
