<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynaarm_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>rqt_joint_trajectory_controller</exec_depend>
  <exec_depend>rqt_controller_manager</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  
  <depend>dynaarm_description</depend>
  <depend>dynaarm_controllers</depend>

  <depend>eigen</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>  
  <depend>pluginlib</depend>
  <depend>urdf</depend>
  
  <depend>ethercat_sdk_master</depend>
  <depend>rsl_drive_sdk</depend>  
  <depend>hardware_interface</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
